# workflow

./: LICENSE  README-prep.md  README.md  index.html  index.qmd
workflow/: LICENSE  Makefile  README.md  pyproject.toml
workflow/docs/: mkdocs.yml
workflow/docs/docs/: index.md
workflow/notebooks/: 01-planning.qmd
workflow/penguin-scraper/: 01-prep-data.html  01-prep-data.qmd  __init__.py  dataset.py  features.py  plots.py
workflow/penguin-scraper/modeling/: predict.py  train.py
workflow/reports/: report.html  report.qmd
