[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "penguin-scraper"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jonathan Jayes" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["penguin-scraper"]
include = ["pyproject.toml", "penguin-scraper/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["penguin-scraper"]
force-sort-within-sections = true

